<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bonus</string>
    <string name="username">UserName</string>
    <string name="Password">Password</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="logout">Logout</string>
    <string name="scan">Scan</string>
    <string name="registration">Registration</string>
    <string name="language">Language</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="amount">Amount</string>
    <string name="save">Save</string>
    <string name="remember_me">Remember Me</string>
    <string name="Client">Client</string>
    <string name="seller">Seller</string>
    <string name="login">Login</string>
    <string name="Select">Select The Language</string>
    <string name="required">required</string>
    <string name="theirnamealreadyinuse">this name already in use</string>
    <string name="wrongusername">wrong username</string>
    <string name="wrongpassword">wrong password</string>
    <string name="help_me">About the program. It has two accessible vouchers and as a salesman allow the customer to get a booth for his shipment, which will later be able to use it and give the seller a chance to put the bonus system in his shop.The program was written by Sargis Minasyan.</string>
    <string name="checkyourbonuses">Check your bonuses!</string>
    <string name="clickheretoread">Click here to read</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

</resources>