<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginVertical="15dp"
    android:backgroundTint="@color/colorPrimary"
    android:background="@drawable/login"
    android:layout_height="match_parent"
    tools:context="com.example.minas.bonus.register.RegistrateYourClient">

    <LinearLayout
        android:weightSum="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_weight="7.5"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_weight="8"

            android:id="@+id/img_result_qr"
            android:layout_width="wrap_content"
            android:layout_height="0dp" />

        <EditText
            android:gravity="center"
            android:layout_weight="0.5"
            android:background="@drawable/rounded_edittext"
            android:editable="false"
            android:id="@+id/username_registration_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textPersonName" />

        <EditText

            android:gravity="center"
            android:editable="false"
            android:background="@drawable/rounded_edittext"
            android:layout_weight="0.5"

            android:id="@+id/phone_registration_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="number" />

        <EditText
            android:gravity="center"
            android:editable="false"
            android:background="@drawable/rounded_edittext"
            android:layout_weight="0.5"

            android:id="@+id/email_registration_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:gravity="center"
            android:editable="false"
            android:background="@drawable/rounded_edittext"
            android:layout_weight="0.5"

            android:id="@+id/password_registration_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:inputType="textPassword" />

    </LinearLayout>

    <Button

        android:background="@drawable/mybutton"
        android:layout_marginHorizontal="70dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:onClick="registration"
        android:text="@string/registration" />
</LinearLayout>
