<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:backgroundTint="@color/colorPrimary"
    android:background="@drawable/registrationclient"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context="com.example.minas.bonus.edit.EditAndBonusActivity"
    android:weightSum="3">
    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

        <ImageView
            android:layout_margin="15dp"
            android:layout_weight="1.5"
            android:id="@+id/bar_code_bonus_edit"
            android:src="@mipmap/scanner"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <LinearLayout
            android:layout_margin="15dp"
            android:gravity="center"
            android:layout_weight="1.5"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <TextView
                android:textSize="20dp"
                android:text="@string/username"
                android:id="@+id/username_edit_bonus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="20dp"
                android:text="@string/phone"
                android:id="@+id/phone_edit_bonus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="20dp"
                android:text="@string/email"
                android:id="@+id/email_edit_bonus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3">

            <EditText
                android:inputType="number"
                android:gravity="center"
                android:background="@drawable/rounded_edittext"
                android:layout_width="0dp"
                android:id="@+id/amount_edit_bonus"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/amount" />

            <TextView
                android:text="Amount with percent"
                android:textSize="25dp"
                android:id="@+id/amount_with_percent"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:textSize="20dp"
            android:id="@+id/your_bonus_sum"
            android:text="Sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:background="@drawable/mybutton"
            android:textSize="20dp"
            android:text="@string/save"
            android:onClick="save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>
